--- a/src/pages/styles/single-note.css
+++ b/src/pages/styles/single-note.css
@@ -17,6 +17,7 @@
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+  word-break: break-word;
 }
 
 .single-note__date {
